# challenge-threadx-and-beyond

./: .clang-format  .gitignore  .gitmodules  NOTES.md  README.md  compile_commands.json  flake.nix  shell.nix  treefmt.nix
.github/workflows/: nix.yaml
MXChip/AZ3166/: CMakePresets.json
MXChip/AZ3166/app/: CMakeLists.txt  board_init.c  board_init.h  cloud_config.h  cmsis_utils.h  console.c  hackathon.h  main.c  mqtt.h  screen.c  screen.h  sntp_client.c  sntp_client.h  threadx_pnp_info.h  wwd_networking.c  wwd_networking.h
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/scripts/: build.sh
frontend/: mqtt_client.html
shared/src/: CMakeLists.txt
